[package]
name = "helm-wrapper-rs"
version = "0.4.1"
edition = "2021"
description = "Helm wrapper library for Rust"
license = "MIT OR Apache-2.0"
authors = ["Eugene Lebedev <eugene.0x90@gmail.com>"]
homepage = "https://github.com/lebe-dev/helm-wrapper-rs"
repository = "https://github.com/lebe-dev/helm-wrapper-rs"
readme = "README.md"
keywords = ["helm", "kubernetes", "wrapper"]
categories = ["api-bindings"]

[features]
default = ["blocking"]
blocking = []
nonblocking = ["dep:tokio"]
blocking-mock = []
nonblocking-mock = ["dep:tokio"]

[dependencies]
thiserror = "1.0.63"

non-blank-string-rs = "1.0.4"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

tokio = { version = "1.42.0", features = ["full"], optional = true }

log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"

non-blank-string-rs = { version = "1.0.4", features = ["utils"] }
